# nsupdate_for_fritz

./: .dockerignore  .gitignore  Dockerfile  README.md  config.ini.example  fritz-nsupdate.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: docker-image.yml  tox-fedora.yml
nsupdate_for_fritz/: __main__.py  address_db.py  addresses.py  exceptions.py  nsupdate.py  util.py
tests/: helpers.py  test_address_db.py  test_cli.py  test_nsupdate_command_generator.py  test_real_fritzbox.py
tests/test_configs/: test_AAAA_config.ini  test_AAAA_fritzbox_config.ini  test_A_config.ini  test_TXT_config.ini  test_no_txt_config.ini  test_other_fritzbox_name_config.ini
